@@ -49,7 +49,10 @@
 
 package com.openexchange.drive.sync;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import com.openexchange.drive.DirectoryVersion;
 import com.openexchange.drive.DriveConstants;
 import com.openexchange.drive.DriveExceptionCodes;
@@ -66,6 +69,8 @@ import com.openexchange.drive.internal.SyncSession;
 import com.openexchange.drive.management.DriveConfig;
 import com.openexchange.drive.storage.DriveStorage;
 import com.openexchange.exception.OXException;
+import com.openexchange.file.storage.File;
+import com.openexchange.file.storage.File.Field;
 import com.openexchange.file.storage.FileStoragePermission;
 import com.openexchange.java.Strings;
 
@@ -165,7 +170,7 @@ public class DirectorySynchronizer extends Synchronizer<DirectoryVersion> {
     protected int processClientChange(IntermediateSyncResult<DirectoryVersion> result, ThreeWayComparison<DirectoryVersion> comparison) throws OXException {
         switch (comparison.getClientChange()) {
         case DELETED:
-            if (mayDelete(comparison.getServerVersion())) {
+            if (mayDelete(comparison.getServerVersion(), true)) {
                 /*
                  * deleted on client, delete on server, too, let client remove it's metadata
                  */
@@ -322,19 +327,82 @@ public class DirectorySynchronizer extends Synchronizer<DirectoryVersion> {
         }
     }
 
-    private boolean mayDelete(DirectoryVersion version) throws OXException {
+    /**
+     * Gets a value indicating whether the user is allowed to delete the supplied directory version (and optionally any subfolder
+     * recursively), i.e. he has administrative permissions at the folder level and is allowed to delete each contained file.
+     *
+     * @param version The directory version to check
+     * @param checkSubfolders <code>true</code> to check contained subfolders recursively, <code>false</code>, otherwise
+     * @return <code>true</code> if deletion is permitted, <code>false</code>, otherwise
+     * @throws OXException
+     */
+    private boolean mayDelete(DirectoryVersion version, boolean checkSubfolders) throws OXException {
         if (DriveConstants.ROOT_PATH.equals(version.getPath())) {
             return false;
         }
         FileStoragePermission ownPermission = session.getStorage().getOwnPermission(version.getPath());
-        return ownPermission.isAdmin() && (DriveConstants.EMPTY_MD5.equals(version.getChecksum()) ||
-                FileStoragePermission.DELETE_OWN_OBJECTS < ownPermission.getDeletePermission());
+        if (false == ownPermission.isAdmin()) {
+            return false;
+        }
+        if (false == DriveConstants.EMPTY_MD5.equals(version.getChecksum())) {
+            if (FileStoragePermission.DELETE_OWN_OBJECTS > ownPermission.getDeletePermission()) {
+                return false;
+            }
+            if (FileStoragePermission.DELETE_OWN_OBJECTS == ownPermission.getDeletePermission()) {
+                String folderID = session.getStorage().getFolderID(version.getPath());
+                List<File> files = session.getStorage().getFilesInFolder(folderID, true, null, Arrays.asList(Field.CREATED_BY));
+                for (File file : files) {
+                    if (file.getCreatedBy() != session.getServerSession().getUserId()) {
+                        return false;
+                    }
+                }
+            }
+        }
+        if (checkSubfolders) {
+            for (DirectoryVersion directoryVersion : getKnownSubDirectories(version)) {
+                if (false == mayDelete(directoryVersion, false)) {
+                    return false;
+                }
+            }
+        }
+        return true;
     }
 
+    /**
+     * Gets a value indicating whether the user is allowed to create subdirectories in the supplied path, i.e. he has "create
+     * subfolders" permissions in the parent folder.
+     *
+     * @param parentPath The path to check
+     * @return <code>true</code> if directory creation is permitted, <code>false</code>, otherwise
+     * @throws OXException
+     */
     private boolean mayCreate(String parentPath) throws OXException {
         return FileStoragePermission.CREATE_SUB_FOLDERS <= session.getStorage().getOwnPermission(parentPath).getFolderPermission();
     }
 
+    /**
+     * Recursively gets all known subdirectories of a directory version (not including the supplied version itself).
+     *
+     * @param version The path to get the subdirectories for
+     * @return The subdirectories, or an empty list if none were found
+     */
+    private List<DirectoryVersion> getKnownSubDirectories(DirectoryVersion version) {
+        List<DirectoryVersion> subDirectories = new ArrayList<DirectoryVersion>();
+        for (DirectoryVersion directoryVersion : mapper.getServerVersions()) {
+            String candidatePath = directoryVersion.getPath();
+            if (candidatePath.startsWith(version.getPath()) && false == candidatePath.equals(version.getPath())) {
+                subDirectories.add(directoryVersion);
+            }
+        }
+        return subDirectories;
+    }
+
+    /**
+     * Gets the last parent path that exists, i.e. that is already known by the server.
+     *
+     * @param path The path to get the last existing parent path for
+     * @return The last existing parent path, down to the root folder if needed
+     */
     private String getLastExistingParentPath(String path) {
         Collection<? extends DirectoryVersion> serverVersions = mapper.getServerVersions();
         String currentPath = path;
