@@ -1,3 +1,7 @@
+* 2014-01-30 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 30852: Check permissions of all subfolders recursively prior accepting client deletion 
+   
 * 2014-01-29 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 30384: Don't distribute non-common events, don't distribute events received via external mail notification   
